@@ -20,56 +20,58 @@
  */
 package com.viglet.turing.onstartup.converse;
 
-import java.util.HashSet;
-import java.util.Set;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
-
+import com.google.inject.Inject;
 import com.viglet.turing.persistence.model.converse.TurConverseAgent;
 import com.viglet.turing.persistence.model.converse.entity.TurConverseEntity;
 import com.viglet.turing.persistence.model.converse.entity.TurConverseEntityTerm;
-import com.viglet.turing.persistence.model.converse.intent.TurConverseContext;
-import com.viglet.turing.persistence.model.converse.intent.TurConverseIntent;
-import com.viglet.turing.persistence.model.converse.intent.TurConverseParameter;
-import com.viglet.turing.persistence.model.converse.intent.TurConversePhrase;
-import com.viglet.turing.persistence.model.converse.intent.TurConversePrompt;
-import com.viglet.turing.persistence.model.converse.intent.TurConverseResponse;
+import com.viglet.turing.persistence.model.converse.intent.*;
 import com.viglet.turing.persistence.repository.converse.TurConverseAgentRepository;
 import com.viglet.turing.persistence.repository.converse.entity.TurConverseEntityRepository;
 import com.viglet.turing.persistence.repository.converse.entity.TurConverseEntityTermRepository;
-import com.viglet.turing.persistence.repository.converse.intent.TurConverseContextRepository;
-import com.viglet.turing.persistence.repository.converse.intent.TurConverseIntentRepository;
-import com.viglet.turing.persistence.repository.converse.intent.TurConverseParameterRepository;
-import com.viglet.turing.persistence.repository.converse.intent.TurConversePhraseRepository;
-import com.viglet.turing.persistence.repository.converse.intent.TurConversePromptRepository;
-import com.viglet.turing.persistence.repository.converse.intent.TurConverseResponseRepository;
+import com.viglet.turing.persistence.repository.converse.intent.*;
 import com.viglet.turing.persistence.repository.se.TurSEInstanceRepository;
+import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.HashSet;
+import java.util.Set;
 
 @Component
 @Transactional
 public class TurConverseAgentOnStartup {
-	@Autowired
-	private TurConverseAgentRepository turConverseAgentRepository;
-	@Autowired
-	private TurConverseIntentRepository turConverseIntentRepository;
-	@Autowired
-	private TurConverseContextRepository turConverseContextRepository;
-	@Autowired
-	private TurConversePhraseRepository turConversePhraseRepository;
-	@Autowired
-	private TurConverseResponseRepository turConverseResponseRepository;
-	@Autowired
-	private TurConverseParameterRepository turConverseParameterRepository;
-	@Autowired
-	private TurConversePromptRepository turConversePromptRepository;
-	@Autowired
-	private TurSEInstanceRepository turSEInstanceRepository;
-	@Autowired
-	private TurConverseEntityRepository turConverseEntityRepository;
-	@Autowired
-	private TurConverseEntityTermRepository turConverseEntityTermRepository;
+	private final TurConverseAgentRepository turConverseAgentRepository;
+	private final TurConverseIntentRepository turConverseIntentRepository;
+	private final TurConverseContextRepository turConverseContextRepository;
+	private final TurConversePhraseRepository turConversePhraseRepository;
+	private final TurConverseResponseRepository turConverseResponseRepository;
+	private final TurConverseParameterRepository turConverseParameterRepository;
+	private final TurConversePromptRepository turConversePromptRepository;
+	private final TurSEInstanceRepository turSEInstanceRepository;
+	private final TurConverseEntityRepository turConverseEntityRepository;
+	private final TurConverseEntityTermRepository turConverseEntityTermRepository;
+
+	@Inject
+	public TurConverseAgentOnStartup(TurConverseAgentRepository turConverseAgentRepository,
+									 TurConverseIntentRepository turConverseIntentRepository,
+									 TurConverseContextRepository turConverseContextRepository,
+									 TurConversePhraseRepository turConversePhraseRepository,
+									 TurConverseResponseRepository turConverseResponseRepository,
+									 TurConverseParameterRepository turConverseParameterRepository,
+									 TurConversePromptRepository turConversePromptRepository,
+									 TurSEInstanceRepository turSEInstanceRepository,
+									 TurConverseEntityRepository turConverseEntityRepository,
+									 TurConverseEntityTermRepository turConverseEntityTermRepository) {
+		this.turConverseAgentRepository = turConverseAgentRepository;
+		this.turConverseIntentRepository = turConverseIntentRepository;
+		this.turConverseContextRepository = turConverseContextRepository;
+		this.turConversePhraseRepository = turConversePhraseRepository;
+		this.turConverseResponseRepository = turConverseResponseRepository;
+		this.turConverseParameterRepository = turConverseParameterRepository;
+		this.turConversePromptRepository = turConversePromptRepository;
+		this.turSEInstanceRepository = turSEInstanceRepository;
+		this.turConverseEntityRepository = turConverseEntityRepository;
+		this.turConverseEntityTermRepository = turConverseEntityTermRepository;
+	}
 
 	public void createDefaultRows() {
 
@@ -80,7 +82,7 @@ public class TurConverseAgentOnStartup {
 			turConverseAgent.setDescription("Sample Agent");
 			turConverseAgent.setLanguage("pt_BR");
 			turConverseAgent.setCore("converse");
-			turConverseAgent.setTurSEInstance(turSEInstanceRepository.findAll().get(0));
+			turConverseAgent.setTurSEInstance(turSEInstanceRepository.findAll().getFirst());
 
 			turConverseAgentRepository.save(turConverseAgent);
 
