@@ -20,18 +20,19 @@
  */
 package com.viglet.turing.sn.ac;
 
+import com.google.inject.Inject;
 import com.viglet.turing.se.TurSEStopword;
 import com.viglet.turing.solr.TurSolr;
 import com.viglet.turing.solr.TurSolrInstance;
 import com.viglet.turing.solr.TurSolrInstanceProcess;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.solr.client.solrj.response.SpellCheckResponse;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
 @Slf4j
 @Component
@@ -40,14 +41,18 @@ public class TurSNAutoComplete {
 	private static final boolean USE_BIGGER_TERMS = false;
 	private static final boolean USE_TERMS_QUERY_EQUALS_AUTO_COMPLETE = true;
 	private static final boolean USE_REPEAT_QUERY_TEXT_ON_AUTOCOMPLETE = false;
-	@Autowired
-	private TurSolr turSolr;
-	@Autowired
-	private TurSEStopword turSEStopword;
-	@Autowired
-	private TurSolrInstanceProcess turSolrInstanceProcess;
+	private final TurSolr turSolr;
+	private final TurSEStopword turSEStopword;
+	private final TurSolrInstanceProcess turSolrInstanceProcess;
 
-	public List<String> autoComplete(String siteName, String q, String locale, long rows) {
+	@Inject
+	public TurSNAutoComplete(TurSolr turSolr, TurSEStopword turSEStopword, TurSolrInstanceProcess turSolrInstanceProcess) {
+		this.turSolr = turSolr;
+		this.turSEStopword = turSEStopword;
+		this.turSolrInstanceProcess = turSolrInstanceProcess;
+	}
+
+	public List<String> autoComplete(String siteName, String q, Locale locale, long rows) {
 	
 		if (q.length() > 1) {
 			return turSolrInstanceProcess.initSolrInstance(siteName, locale).map(instance -> {
@@ -82,7 +87,7 @@ public class TurSNAutoComplete {
 			int numberOfWordsFromQuery) {
 		List<String> autoCompleteListFormatted = new ArrayList<>();
 		if (hasSuggestions(turSEResults)) {
-			List<String> autoCompleteList = turSEResults.getSuggestions().get(0).getAlternatives();
+			List<String> autoCompleteList = turSEResults.getSuggestions().getFirst().getAlternatives();
 			TurSNAutoCompleteListData autoCompleteListData = new TurSNAutoCompleteListData(turSEStopword.getStopWords(turSolrInstance));
 			autoCompleteList.forEach(autoCompleteItem -> processTerm(numberOfWordsFromQuery, autoCompleteListFormatted,
 					autoCompleteListData, autoCompleteItem));
@@ -130,7 +135,7 @@ public class TurSNAutoComplete {
 			List<String> resultList = autoCompleteWithoutDuplicated.stream().filter(s -> s.startsWith(term))
 					.toList();
 			if (resultList.size() == 1) {
-				autoCompleteOnlyBiggerTerms.add(resultList.get(0));
+				autoCompleteOnlyBiggerTerms.add(resultList.getFirst());
 			}
 		}
 
